Kết nối database vào trong server. Render trang Thể loại

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Hôm nay bạn muốn xem phim gì?</h1>
+    <p>Nếu như chưa quyết định được thì <a href="/TheLoai">ấn vào đây</a> để khám phá các thể loại phim.</p>
 </div>
