Public appsettings.json and appsettings.development.json file and Update (Edit Feature)

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Hôm nay bạn muốn xem phim gì?</h1>
-    <p>Nếu như chưa quyết định được thì <a href="/TheLoai">ấn vào đây</a> để khám phá các thể loại phim.</p>
+    <h1 class="display-4">Chào mừng đến với trang Admin.</h1>
+    <p>Điều chỉnh, xem danh sách các thể loại <a href="/TheLoai">tại đây</a>.</p>
 </div>
