--- a/Views/TheLoai/Create.cshtml
+++ b/Views/TheLoai/Create.cshtml
@@ -1,10 +1,9 @@
-﻿
+﻿@model TheLoaiModel
 @{
     ViewData["Title"] = "Create";
 }
 
 <h1>Create</h1>
-@model TheLoaiModel
 <div class="container">
 	<h3>Thêm thể loại</h3>
 	<form method="post" id="create-form" action="">
@@ -19,3 +18,4 @@
 		<button type="submit" class="btn btn-primary">Tạo mới</button>
 	</form>
 </div>
+<partial name="~/Views/Shared/_TheLoaiActionPartial.cshtml" />
