--- a/Views/TheLoai/Create.cshtml
+++ b/Views/TheLoai/Create.cshtml
@@ -7,15 +7,26 @@
 <div class="container">
 	<h3>Thêm thể loại</h3>
 	<form method="post" id="create-form" action="">
+		<div asp-validation-summary="All" class="text-danger"></div>
 		<article class="create-form__input-container">
 			<label asp-for="Name">Tên thể loại</label>
 			<input asp-for="Name" type="text" class="form-control" />
+			<span asp-validation-for="Name" class="text-danger"></span>
 		</article>
 		<article class="create-form__input-container">
 			<label asp-for="DateCreated">Ngày tạo</label>
 			<input asp-for="DateCreated" type="date" class="form-control" />
+			<span asp-validation-for="DateCreated" class="text-danger"></span>
 		</article>
+		
+		<textarea rows="9" cols="70" name="comment" form="usrform"> Nhập mô tả</textarea>
+		<input type="number"/>
 		<button type="submit" class="btn btn-primary">Tạo mới</button>
 	</form>
 </div>
 <partial name="~/Views/Shared/_TheLoaiActionPartial.cshtml" />
+@section Scripts{
+	@{
+		<partial name="_ValidationScriptsPartial"/>
+	}
+}
