--- a/Views/TheLoai/Details.cshtml
+++ b/Views/TheLoai/Details.cshtml
@@ -6,6 +6,7 @@
 <div class="details-content">
     <h2>Tên thể loại: @ViewBag.ChiTiet.Name</h2>
     <p><strong>Mô tả:&nbsp;&nbsp;</strong>@ViewBag.ChiTiet.Description</p>
-    <p><strong>Ngày tạo:&nbsp;&nbsp;</strong>@ViewBag.ChiTiet.DateCreate</p>
+    <p><strong>Ngày tạo:&nbsp;&nbsp;</strong>@ViewBag.ChiTiet.DateCreated</p>
+    <p><strong>Số lượng phim:&nbsp;&nbsp;</strong>@ViewBag.ChiTiet.AmountFilm</p>
 </div>
 <a asp-controller="TheLoai" asp-action="">Trở về</a>
