--- a/Views/TheLoai/Edit.cshtml
+++ b/Views/TheLoai/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model TheLoaiModel
+﻿@model ChiTietTheLoaiViewModel;
 @{
     ViewData["Title"] = "Edit";
 }
@@ -10,22 +10,33 @@
 		<div asp-validation-summary="All" class="text-danger"></div>
 		<article class="create-form__input-container">
 			<label asp-for="Name">Tên thể loại</label>
-			<p><span class="text-primary">Old Name: </span>@Model.Name</p>
-			<input asp-for="Name" type="text" class="form-control" value="" />
+			<input asp-for="Name" type="text" class="form-control" value=@ViewBag.ChiTiet.Name />
 			<span asp-validation-for="Name" class="text-danger"></span>
 		</article>
 		<article class="create-form__input-container">
 			<label asp-for="DateCreated">Ngày tạo</label>
-			<p><span class="text-primary">Old Date: </span>@Model.DateCreated.ToString("MM/dd/yyyy")</p>
-			<input asp-for="DateCreated" type="date" class="form-control" value=""  />
+			<p><span class="text-primary">Old Date: </span>@ViewBag.ChiTiet.DateCreated.ToString("MM/dd/yyyy")</p>
+			<input asp-for="DateCreated" type="date" class="form-control"/>
 			<span asp-validation-for="DateCreated" class="text-danger"></span>
 		</article>
+		<article class="create-form__input-container">
+			<label asp-for="AmountFilm">Số lượng phim</label>
+			<input asp-for="AmountFilm" type="number" class="form-control" value=@ViewBag.ChiTiet.AmountFilm/>
+			<span asp-validation-for="AmountFilm" class="text-danger"></span>
+		</article>
+		<article class="create-form__input-container">
+			<label asp-for="Description">Mô tả</label>
+			<textarea name="Description" id="Description" class="description-field">@ViewBag.ChiTiet.Description</textarea>
+			<span asp-validation-for="Description" class="text-danger"></span>
+		</article>
+		<input type="hidden" asp-for="CategoryId" value=@ViewBag.ChiTiet.CategoryId />
+		<input type="hidden" asp-for="CategoryDetailsId" value=@ViewBag.ChiTiet.CategoryDetailsId />
 		<button type="submit" class="btn btn-primary">Sửa</button>
 	</form>
 </div>
 <partial name="~/Views/Shared/_TheLoaiActionPartial.cshtml" />
 @section Scripts {
 	@{
-		<partial name="~/Views/Shared/_ValidationScriptsPartial.cshtml" />
+	<partial name="~/Views/Shared/_ValidationScriptsPartial.cshtml" />
 	}
 }
