--- a/Views/TheLoai/Index.cshtml
+++ b/Views/TheLoai/Index.cshtml
@@ -11,9 +11,10 @@
         <th>Chức năng</th>
     </tr>
     @{
+        int index = 1;
         foreach(var category in @ViewBag.TheLoai) {
             <tr>
-                <td>@category.Id</td>
+                <td>@index</td>
                 <td>@category.Name</td>
                 <td>@category.DateCreated</td>
                 <td>
@@ -34,8 +35,18 @@
                     >
                     Chi tiết
                     </a>
+                    |
+                    <a 
+                        asp-controller="TheLoai"
+                        asp-action="Delete"
+                        asp-route-id=@category.Id
+                    >
+                    Xoá
+                    </a>
+                    
                 </td>
             </tr>
+            index += 1;
         }
     }
 </table>
