Update TH04 to TH06, big changes in project

--- a/Views/Cameras/Delete.cshtml
+++ b/Views/Cameras/Delete.cshtml
@@ -1,8 +1,8 @@
-﻿@model ChiTietTheLoaiViewModel;
+﻿@model CameraDetailsViewModel;
 @{
     ViewData["Title"] = "Delete";
 }
-
+<!--
 <h1>@ViewData["Title"]</h1>
 <div class="container">
 	<h3>Xoá thể loại</h3>
@@ -33,6 +33,7 @@
 	</form>
 </div>
 <partial name="~/Views/Shared/_TheLoaiActionPartial.cshtml" />
+-->
 @section Scripts {
 	@{
 	<partial name="~/Views/Shared/_ValidationScriptsPartial.cshtml" />
