--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Chào mừng đến với trang Admin.</h1>
-    <p>Điều chỉnh, xem danh sách các thể loại <a href="/TheLoai">tại đây</a>.</p>
+    <p>Điều chỉnh, xem danh sách các thể loại <a asp-controller="Cameras" asp-action="">tại đây</a>.</p>
 </div>
