--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -59,3 +59,7 @@ td, th {
     border: 1px solid rgba(0, 0, 0, .125);
     border-radius: .25rem;
 }
+
+.verticle-space {
+    margin-bottom: 25px;
+}
