--- a/Views/Cameras/Index.cshtml
+++ b/Views/Cameras/Index.cshtml
@@ -1,52 +1,72 @@
 ﻿@{
-    ViewData["Title"] = "The Loai";
+    ViewData["Title"] = "Máy ảnh";
 }
 
-<h1 class="mb-4 mt-2 .text-primary">Thể loại/Tất cả</h1>
-<table>
-    <tr>
+
+<link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css" />
+<script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+
+<h1 class="mb-4 mt-2 .text-primary">Máy ảnh / Tất cả</h1>
+<table id="camera-table">
+    <thead>
+        <tr>
         <th>Số thứ tự</th>
         <th>Tên máy</th>
         <th>Tên hãng</th>
         <th>Loại máy</th>
         <th>Chức năng</th>
     </tr>
-    @{
-        int index = 1;
-        foreach (var camera in @ViewBag.Cameras)
-        {
-            <tr>
-                <td>@index</td>
-                <td>@camera.Name</td>
-                <td>@camera.Brand.Name</td>
-                <td>@camera.Category</td>
-                <td>
-                    <a
-                        asp-controller="TheLoai"
-                        asp-action="Edit"
-                        asp-route-id=@camera.Id
-                    >
-                    Chỉnh sửa
-                    </a>
-                    |
-                    <a 
-                        asp-controller="TheLoai"
-                        asp-action="Details"
-                        asp-route-id=@camera.Id>
-                    Chi tiết
-                    </a>
-                    |
-                    <a 
-                        asp-controller="TheLoai"
-                        asp-action="Delete"
-                        asp-route-id=@camera.Id>
-                    Xoá
-                    </a>
-                    
-                </td>
-            </tr>
-            index += 1;
+    </thead>
+    <tbody>
+        @{
+            int index = 1;
+            foreach (var camera in @ViewBag.Cameras)
+            {
+                <tr>
+                    <td>@index</td>
+                    <td>@camera.Name</td>
+                    <td>@camera.BrandName</td>
+                    <td>@camera.Category</td>
+                    <td>
+                        <a 
+                    asp-controller="Cameras"
+                    asp-action="Details"
+                    asp-route-id=@camera.Id
+                    class="btn btn-primary"
+                        >
+                            Chi tiết
+                        </a>
+                        |
+                        <a 
+                    asp-controller="Cameras"
+                    asp-action="Edit"
+                    asp-route-id=@camera.Id
+                    class="btn btn-warning"
+                        >
+                            Chỉnh sửa
+                        </a>
+                        |
+                        <a 
+                            data-itemid=@camera.Id
+                            class="btn btn-danger delete-button"
+                        >
+                            Xoá
+                        </a>
+
+                    </td>
+                </tr>
+                index += 1;
+            }
         }
-    }
+    </tbody>
 </table>
 <partial name="~/Views/Shared/_CameraActionPartial.cshtml" />
+
+@section Scripts {
+    <partial name="~/Views/Shared/_DeleteWarningBoxScriptPartial.cshtml" />
+    <script>
+        $(document).ready(function () {
+            $('#camera-table').DataTable();
+        });
+    </script>
+}
