--- a/Views/Cameras/Details.cshtml
+++ b/Views/Cameras/Details.cshtml
@@ -1,12 +1,24 @@
 ﻿@{
-    ViewData["Title"] = ViewBag.ChiTiet.Name;
+    ViewData["Title"] = ViewBag.ChiTiet.CameraName;
+    string[] features = ViewBag.ChiTiet.CameraFeatures.Split(';');
 }
 
-<h1 class="mb-4 mt-2 .text-primary">Thể loại/Chi tiết</h1>
+<h1 class="mb-4 mt-2 .text-primary">Camera > @ViewBag.ChiTiet.BrandName > @ViewBag.ChiTiet.Category > Details</h1>
 <div class="details-content">
-    <h2>Tên thể loại: @ViewBag.ChiTiet.Name</h2>
-    <p><strong>Mô tả:&nbsp;&nbsp;</strong>@ViewBag.ChiTiet.Description</p>
-    <p><strong>Ngày tạo:&nbsp;&nbsp;</strong>@ViewBag.ChiTiet.DateCreated</p>
-    <p><strong>Số lượng phim:&nbsp;&nbsp;</strong>@ViewBag.ChiTiet.AmountFilm</p>
+    <h2>Tên thể loại: @ViewBag.ChiTiet.CameraName</h2>
+    <p>
+        <span><strong>Hãng:&nbsp;&nbsp;</strong>@ViewBag.ChiTiet.BrandName</span>
+        <span><strong>Loại:&nbsp;&nbsp;</strong>@ViewBag.ChiTiet.Category</span>
+    </p>
+    <h3><strong>Gía:&nbsp;&nbsp;</strong>@ViewBag.ChiTiet.CameraPrice</h3>
+    <ul>
+        @foreach(string feature in features) {
+            <li>@feature</li>
+        }
+    </ul>
+    <p>@ViewBag.ChiTiet.CameraIntroduction</p>
+    <div class="details-image">
+        <img src="@ViewBag.ChiTiet.ImageUrls" />
+    </div>
 </div>
-<a asp-controller="TheLoai" asp-action="">Trở về</a>
+<a asp-controller="Cameras" asp-action="">Trở về</a>
