--- a/Areas/Admin/Views/Cameras/Edit.cshtml
+++ b/Areas/Admin/Views/Cameras/Edit.cshtml
@@ -1,35 +1,36 @@
 ﻿@model CameraDetailsViewModel;
 @{
     ViewData["Title"] = "Edit";
+	string[] imageUrls = ViewBag.ChiTiet.ImageUrls.Split(";");
 }
 
-<h1>@ViewData["Title"]</h1>
 <div class="container">
+	<h1>@ViewData["Title"]</h1>
 	<h3>Sửa thông tin máy</h3>
 	<form method="post" id="edit-form" action="" enctype="multipart/form-data">
 		<div asp-validation-summary="All" class="text-danger"></div>
-		<article class="create-form__input-container">
+		<article class="form__input-container">
 			<label asp-for="CameraName">Tên máy</label>
 			<input asp-for="CameraName" type="text" class="form-control" value=@ViewBag.ChiTiet.CameraName />
 			<input asp-for="CameraId" type="hidden" value=@ViewBag.ChiTiet.CameraId />
 			<span asp-validation-for="CameraName" class="text-danger"></span>
 		</article>
-		<article class="create-form__input-container">
+		<article class="form__input-container">
 			<label asp-for="CameraPrice">Giá bán</label>
 			<input asp-for="CameraPrice" type="text" class="form-control" value=@ViewBag.ChiTiet.CameraPrice />
 			<span asp-validation-for="CameraPrice" class="text-danger"></span>
 		</article>
-		<article class="create-form__input-container">
+		<article class="form__input-container">
 			<label asp-for="CameraFeatures">Tính năng của máy</label>
 			@(Html.Raw("<textarea id=\"CameraFeatures\" name=\"CameraFeatures\" class=\"description-field\">"))@ViewBag.ChiTiet.CameraFeatures@(Html.Raw("</textarea>"))
 			<span asp-validation-for="CameraFeatures" class="text-danger"></span>
 		</article>
-		<article class="create-form__input-container">
+		<article class="form__input-container">
 			<label asp-for="CameraIntroduction">Giới thiệu thiết bị</label>
 			@(Html.Raw("<textarea id=\"CameraIntroduction\" name=\"CameraIntroduction\" class=\"description-field\">"))@ViewBag.ChiTiet.CameraIntroduction@(Html.Raw("</textarea>"))
 			<span asp-validation-for="CameraIntroduction" class="text-danger"></span>
 		</article>
-		<article class="create-form__input-container">
+		<article class="form__input-container">
 			<label asp-for="BrandId">Hãng</label>
 			<select asp-for="BrandId" asp-items=@ViewBag.BrandNames class="form-control">
 				<option>Chọn tên hãng</option>
@@ -40,43 +41,25 @@
 				<option>Chọn loại</option>
 			</select>
 		</article>
-		<div class="details-image">
-			<img src="@ViewBag.ChiTiet.ImageUrls" />
-		</div>
-		<article class="create-form__input-container">
-			<label asp-for="ImageFile">Hình ảnh</label>
-			<input asp-for="ImageFile" type="file" accept="image/*" />
-			<input asp-for="OldImageUrls" type="hidden" value=@ViewBag.ChiTiet.ImageUrls />
-			<span asp-validation-for="ImageFile" class="text-danger"></span>
+		<div class="images-block">
+            @foreach (string url in imageUrls) {
+                if(url.Equals("")) continue;
+                <img src="/@url" alt="an image of @ViewBag.ChiTiet.CameraName" />
+            }
+        </div>
+		<article class="form__input-container" id="input-file-tags">
 		</article>
+		<div class="other-buttons">
+			<button type="button" class="btn btn-outline-secondary" id="js-addNewInputFileTagButton">Thêm ảnh</button>
+		</div>
 		<button type="submit" class="btn btn-primary">Tạo mới</button>
 	</form>
 </div>
 <partial name="~/Views/Shared/_CameraActionPartial.cshtml" />
+<partial name="../Shared/_AdminAddInputFileTagPartial.cshtml" />
+<partial name="~/Views/Shared/_ValidationScriptsPartial.cshtml" />
 @section Scripts {
-	@{
-	<partial name="~/Views/Shared/_ValidationScriptsPartial.cshtml" />
-	}
 	<script>
-		/*
-		const HTML_ENTITIES = {
-			'&#xD;': '\r',
-			'&#xA;': '\n',
-			'&apos;': '\'',
-			'&quot;': '"'
-		};
-		const featuresTextArea = document.getElementById('CameraFeatures');
-		const introductionTextArea = document.getElementById('CameraIntroduction');
-		const htmlCodeTextAreaToRegExp = /(&#xD;)|(&#xA;)|(&apos;)|(&quot;)/g;
-		const featuresTextAreaValue = "@ViewBag.ChiTiet.CameraFeatures".replace(htmlCodeTextAreaToRegExp, (match) => {
-			return HTML_ENTITIES[match];
-		});
-		const introductionTextAreaValue = "@ViewBag.ChiTiet.CameraIntroduction".replace(htmlCodeTextAreaToRegExp, (match) => {
-			return HTML_ENTITIES[match];
-		});
-		featuresTextArea.value = featuresTextAreaValue;
-		introductionTextArea.value = introductionTextAreaValue;
-		*/
 		document.getElementById('BrandId').value = @ViewBag.ChiTiet.BrandId;
 		console.log("@ViewBag.ChiTiet.Category");
 		document.getElementById('Category').value = "@ViewBag.ChiTiet.Category";
