--- a/Areas/User/Views/Products/Index.cshtml
+++ b/Areas/User/Views/Products/Index.cshtml
@@ -1,40 +1,43 @@
 ﻿@{
 	ViewData["Title"] = "View All";
 }
-
-<h1>View All Cameras</h1>
-<div class="container py-5">
-    <div class="row text-center text-white mb-5">
-        <div class="col-lg-7 mx-auto text-black">
+<partial name="../Shared/_UserHeaderPartial.cshtml" />
+<div class="container pb-5 pt-5">
+    <div class="row text-center text-black mb-3">
+        <div class="col-lg-7 mx-auto">
             <h1 class="display-4">Product List</h1>
         </div>
     </div>
     <div class="row product-item">
         <div class="col-lg-8 mx-auto">
-            <!-- List group-->
-            <ul class="list-group shadow">
-                @foreach (var item in @ViewBag.Cameras)
-                {
-                    <li class="list-group-item">
-                        <!-- Custom content-->
-                        <div class="media align-items-lg-center flex-column flex-lg-row p-3">
-                            <div class="media-body order-2 order-lg-1">
-                                <h5 class="mt-0 font-weight-bold mb-2">@item.Name</h5>
-                                <p>Key features</p>
-                                <ul>
-                                    @for(int i = 0; i < 3; i++)
-                                    {
-                                        <li>@item.Features.Split(";")[i]</li>
-                                    }
-                                </ul>
-                                <div class="d-flex align-items-center justify-content-between mt-1">
-                                    <h6 class="font-weight-bold my-2">@item.Price đ</h6>
-                                </div>
-                            </div><img src="@item.ImageUrls" alt="Generic placeholder image" width="200" class="ml-lg-5 order-1 order-lg-2">
-                        </div> <!-- End -->
-                    </li> <!-- End -->
-                }
-            </ul> <!-- End -->
+            <div class="product-list"></div>
+            @foreach (var item in @ViewBag.Cameras)
+            {
+                <div class="row p-2 my-4 bg-white border rounded">
+                    <div class="col-md-3 mt-1"><img class="img-fluid img-responsive rounded product-image" src="/@item.ImageUrls.Split(";")[0]" alt="an image of @item.Name"></div>
+                    <div class="col-md-6 mt-1">
+                        <h5 class="m-0">@item.Name</h5>
+                        <div class="d-flex flex-row mb-2">
+                            <p class="fs-6 fw-lighter">Đã bán 1.4k</p>
+                        </div>
+                        <div>
+                            @for (int i = 0; i < 3; i++)
+                            {
+                                <p>@item.Features.Split(";")[i]</p>
+                            }
+                        </div>
+                    </div>
+                    <div class="align-items-center align-content-center col-md-3 border-left mt-1">
+                        <div class="d-flex flex-row align-items-center">
+                            <h4 class="mr-1">@item.Price đ</h4>
+                        </div>
+                        <h6 class="text-success">Free shipping</h6>
+                        <div class="d-flex flex-column mt-4"><a class="btn btn-primary btn-sm" asp-area="User" asp-controller="Products" asp-action="Details" asp-route-id="@item.Id">Details</a><button class="btn btn-outline-primary btn-sm mt-2" type="button">Add to wishlist</button></div>
+                    </div>
+                </div>
+            }
+            </div>
         </div>
     </div>
 </div>
+<partial name="../Shared/_UserFooterPartial.cshtml" />
