--- a/Areas/User/Views/Products/Details.cshtml
+++ b/Areas/User/Views/Products/Details.cshtml
@@ -2,7 +2,14 @@
     string[] features = ViewBag.ChiTiet.CameraFeatures.Split(";");
 }
 
-<partial name="../Shared/_UserHeaderPartial.cshtml" />
+<header class="bg-dark py-5">
+    <div class="container px-4 px-lg-5 my-5">
+        <div class="text-center text-white">
+            <h1 class="display-4 fw-bolder">Shop in style</h1>
+            <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
+        </div>
+    </div>
+</header>
 <div class="container mt-4">
     <div class="details">
         <div class="details-body">
@@ -67,4 +74,3 @@
         </div>
     </div>
 </div>
-<partial name="../Shared/_UserFooterPartial.cshtml" />
