--- a/Views/Shared/_HeaderPartial.cshtml
+++ b/Views/Shared/_HeaderPartial.cshtml
@@ -28,15 +28,8 @@
                     <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
                 </button>
             </form>
+            <partial name="~/Views/Shared/_LoginPartial.cshtml"/>
         </div>
     </div>
 </nav>
 <!-- Header-->
-<header class="bg-dark py-5">
-    <div class="container px-4 px-lg-5 my-5">
-        <div class="text-center text-white">
-            <h1 class="display-4 fw-bolder">Shop in style</h1>
-            <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
-        </div>
-    </div>
-</header>
