--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,5 +1,15 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 html {
   font-size: 14px;
+}
+
+body {
+    height: 100vh;
 }
 
 @media (min-width: 768px) {
@@ -183,4 +193,15 @@ ul li {
 .key-features li {
     display: flex;
     align-items: center;
+}
+
+.register-section, .login-section {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
+    height: calc(100vh - 276px);
+    margin-top: 75px;
+    margin-bottom: 25px;
+    margin-left: 0;
 }
